Fix publication page

--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
 
@@ -242,7 +250,7 @@
 			</div>
 
 			<h3 class="content_separation">Conference and Workshop Participation</h3>
-			
+
 			<div id="profile-conference-section">
 				<br>
 				.......will be updated soon......
