--- a/teaching.html
+++ b/teaching.html
@@ -1,259 +1,382 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
+
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Personal webpage" />
 	<meta name="keywords" content="Monowar, H., Bhuyan, Umeå University, umu, computing science" />
-	<meta name="author" content="Monowar Bhuyan"/>
+	<meta name="author" content="Monowar Bhuyan" />
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
+
 	<head>
-	 <link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16"/>
-</head>
+		<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
+	</head>
 
 </head>
 
 <body>
-<div id="container" >
-	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
-		<h1> Monowar Bhuyan   </h1>
-		<h2> Assistant Professor of Computing Science, Umeå University </h2>
-	</div>
+	<div id="container">
 
-	<div id="navigation">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="profile.html">Profile</a></li>
-		<li><a href="research.html">Research</a></li>
-		<li class="selected"><a href="teaching.html">Teaching</a></li>
-		<li><a href="group.html">Group</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li><a href="talks.html">Talks</a></li>
-			<li><a href="activities.html">Community Services</a></li>
-		<li><a href="misc.html">Misc</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
+		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
+			<div id="department">
+				<h1>Department of Computing Science</h1>
+			</div>
+			<div id="border_dept_fac">
+			</div>
+			<div id="faculty">
+				<h1>Faculty of Science and Technology</h1>
+			</div>
+		</div>
 
+		<div class="bio">
+			<img id="profile_img" src="pics/mb_web.jpg">
+			<div id="affiliation">
+				<h3>Affiliations</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+					University</li>
+				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+						Learning Group</a></li>
+				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+						target="_blank">Member</a>, Umeå AI </li>
+				<br>
+			</div>
+			<div id="external_links">
+				<h3>Links</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/"
+						target="_blank">Umeå
+						AI</a></li>
+				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
+				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
+						Science</a></li>
+				<br>
+				<li>Email: monowar (at) cs.umu.se</li>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
+					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/monowar-bhuyan-4a034416/" target="_blank">
+					<img src="pics/linkedin.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.researchgate.net/profile/Monowar_Bhuyan" target="_blank">
+					<img src="pics/rg.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://github.com/mbhuyan" target="_blank">
+					<img src="pics/gh.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+			</div>
+		</div>
 
-<div id="contentWide">
-  <a name="current"> </a>
-
-	<h3>Umeå University, Sweden</h3>
-	<ul>
-
-	<li>Bachelor's and Master's Level</li>
-	<ul>
-		<li>5DV220 <a href="https://www.umu.se/en/education/syllabus/5dv220/" target="_blank">Computer Security</a> - Autumn Term 2022 (teacher)</li>
-		<br>
-	<li>5DV171 <a href="https://www.umu.se/en/education/courses/operating-systems/" target="_blank">Operating Systems</a> - Winter Term 2022, 2023 (course leader)</li>
-	<br>
-		<li>5DV186 <a href="https://www.umu.se/en/education/courses/distributed-systems2/" target="_blank">Distributed Systems</a> - Spring Term 2022 (teacher)</li>
-		<br>
-
-	<li>5DV186 <a href="https://www.umu.se/en/education/courses/distributed-systems2/" target="_blank">Distributed Systems</a> - Spring Term 2021 (course leader)</li>
-	<br>
-	<li>5DV192 <a href="https://www.umu.se/en/education/courses/cloud-computing/" target="_blank">Cloud Computing</a> - Spring Term 2019 (teacher)</li>
-</ul>
-<li>Course revision and development</li>
-<ul>
-	<li>5DV220 <a href="https://www.umu.se/en/education/syllabus/5dv220/" target="_blank">Computer Security</a> - 2022</li>
-		<br>
-	<li>Planning and development committee for Machine Learning courses</a> - 2021</li>
-	<br>
-</ul>
-</ul>
-
-<h3>Assam Kaziranga University, India</h3>
-
-<ul>
-	<li>Course revision and development</li>
-	<ul>
-		<li>ET 3312 Data Mining for Cyber Security - PhD course, 2015</li>
-			<br>
-		<li>UN 3003 Computational Software - PhD course, 2015</li>
-    <br>
-		<li>ET 1369 Network Security and Privacy (elective) - Bachelor course, 2014</li>
-
-	</ul>
-
-<li>B.Tech(CSE) Semester VII (2014-2018 Batch)</li>
-<ul>
-<li>ET 1364 Cryptography </li>
-<li>ET 1357 Algorithms Lab</li>
-</ul>
-<li>B.Tech(CSE+ECE+EE) Semester III (2016-2020 Batch) and B.Tech(CSE) Semester V (2015-2019 Batch)</li>
-<ul>
-<li>ET 1345 Design and Analysis of Algorithms</li>
-</ul>
-<li>B.Tech(CSE+ECE+EE) Semester I (2017-2021 Batch) and B.Tech(CSE+ECE+EE) Semester III (2017-2020 Batch Lateral)</li>
-<ul>
-<li>IBM 1301 Introduction to Open Source and Open Standards</li>
-</ul>
-
-
-<li>B.Tech(CSE) Semester IV (2015-2019 Batch)</li>
-<ul>
-<li>ET 1339 UNIX and Linux Programming</li>
-<li>ET 1340 UNIX and Linux Programming Lab</li>
-</ul>
-
-<li>B.Tech(CSE) Semester II (2016-2020 Batch)</li>
-<ul>
-<li>ET 1384 Programming and Data Structures</li>
-<li>ET 1385 Programming and Data Structures Lab</li>
-</ul>
-
-<li>PhD Course (CSE) Semester II (2016 Batch)</li>
-<ul>
-<li>ET 3312 Data Mining for Cyber Security</li>
-</ul>
-
-<li>B.Tech(CSE) Semester VII (2013-2017 Batch)</li>
-<ul>
-<li>ET 1364 Cryptography (elective)</li>
-<li>ET 1357 Algorithms Lab</li>
-</ul>
-
-<li>B.Tech(CSE) Semester I (2016-2020 Batch)</li>
-<ul>
-<li>IBM 1301 Introduction to Open Source and Open Standards (IBM Course)</li>
-</ul>
-
-<li>PhD Course (SET, SCS, SBS) Semester I (2016 Batch)</li>
-<ul>
-<li>UN 3003 Computational Software</li>
-</ul>
-
-<li>B.Tech.(ALL BRANCH) Semester II (2015-2019 Batch)</li>
-<ul>
-<li>ET 1320 Introduction to Computing</li>
-<li>ET 1321 Introduction to Computing Lab</li>
-</ul>
-
-<li>B.Tech.(CSE) Semester VII (2012-2016 Batch)</li>
-<ul>
-<li>ET 1369 Network Security and Privacy (elective)</li>
-<li>ET 1358 Project Phase-I</li>
-</ul>
-
-<li>B.Tech.(CSE+ECE) Semester III (2014-2018 Batch)</li>
-<ul>
-<li>ET 1333 Data Structures Using C++</li>
-<li>ET 1334 Data Structures Using C++ Lab</li>
-</ul>
-
-<li>B.Tech.(CSE) Semester VI (2012-2016 Batch)</li>
-<ul>
-<li>ET 1350 Operating Systems</li>
-</ul>
-
-<li>M.Sc.(IT) Semester II (2014-2018 Batch)</li>
-<ul>
-<li>CS 2216 Operating Systems</li>
-</ul>
-
-<li>M.Sc.(IT) Semester IV (2013-2015 Batch)</li>
-<ul>
-<li>CS 2041 Cloud Computing</li>
-</ul>
-
-<li>B.Tech(CSE) Semester IV (2013-2017 Batch)</li>
-<ul>
-<li>ET 1335 Discrete Mathematics</li>
-</ul>
-
-<li>B.Tech(CSE) Semester IV (2013-2017 Batch)</li>
-<ul>
-<li>ET 1339 UNIX and Linux Programming</li>
-<li>ET 1340 UNIX and Linux Programming Lab</li>
-</ul>
-
-<li>B.Tech. (CSE) Semester V (2012-2016 Batch)</li>
-<ul>
-<li>ET 1345 Design and Analysis of Algorithms</li>
-</ul>
-
-<li>M.Sc. (IT) Semester III (2013-2015 Batch)</li>
-<ul>
-<li>CS 2225 Design and Analysis of Algorithms</li>
-</ul>
-
-<li>B.Tech. (CSE+ECE) Semester III (2013-2017 Batch)</li>
-<ul>
-<li>ET 1333 Data Structures Using C++</li>
-<li>ET 1334 Data Structures Using C++ Lab</li>
-</ul>
-
-<li>B.Tech. (CSE) Semester IV (2012-2016 Batch)</li>
-<ul>
-<li>ET 1323 Object-Oriented Programming Using JAVA</li>
-<li>ET 1324 Object-Oriented Programming Using JAVA Lab</li>
-<li>ET 1325 Data Communication</li>
-<li>ET 1326 Data Communication Lab</li>
-</ul>
-
-<li>B.Tech. (CSE+ECE) Semester III (2012-2016 Batch)</li>
-<ul>
-<li>ET 1316 Advanced Data Structures</li>
-<li>ET 1819 RDBMS Lab</li>
-</ul>
-
-<li>M.Sc. (IT) Semester I (2013-2015 Batch)</li>
-<ul>
-<li>CS 2119 Advanced Data Structures</li>
-<li>CS 2139 ADBMS Lab</li>
-</ul>
-</ul>
-
-<h3>Tezpur University, India </h3>
-<ul>
-<li>MCA (2007-2010 Batch)</li>
-<ul>
-<li>DBMS Lab</li>
-<li>Operating Systems Lab</li>
-</ul>
-</ul>
-
-<h3>NIELIT Centre, Tezpur University, India</h3>
-<ul>
-<li>'A' Level (2009-2013)</li>
-<ul>
-<li>A3-R4 Programming and Problem Solving through ‘C’ language</li>
-<li>A5-R4 Structured System Analysis & Design</li>
-<li>A6-R4 Data Structure through C++</li>
-<li>A7-R4 Introduction to DBMS</li>
-<li>A8-R4 Basics of OS, Unix & Shell Programming</li>
-<li>A9-R4 Data Communication and Network Technologies</li>
-<li>A10.1-R4 Introduction to Object-Oriented Programming Through JAVA</li>
-</ul>
-</ul>
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
 
 
-</div>
+		<div class="contents">
+
+			<h3 class="content_separation">Umeå University, Sweden</h3>
+			<div class="profile_sections">
+				<ul class="profile_sections">
+					<li>Bachelor's and Master's Level</li>
+					<ul>
+						<li>5DV220 <a href="https://www.umu.se/en/education/syllabus/5dv220/" target="_blank">Computer
+								Security</a> - Autumn Term 2022 (teacher)</li>
+						<li>5DV171 <a href="https://www.umu.se/en/education/courses/operating-systems/"
+								target="_blank">Operating Systems</a> - Winter Term 2022, 2023 (course leader)</li>
+						<li>5DV186 <a href="https://www.umu.se/en/education/courses/distributed-systems2/"
+								target="_blank">Distributed Systems</a> - Spring Term 2022 (teacher)</li>
+
+						<li>5DV186 <a href="https://www.umu.se/en/education/courses/distributed-systems2/"
+								target="_blank">Distributed Systems</a> - Spring Term 2021 (course leader)</li>
+						<li>5DV192 <a href="https://www.umu.se/en/education/courses/cloud-computing/"
+								target="_blank">Cloud
+								Computing</a> - Spring Term 2019 (teacher)</li>
+					</ul>
+					<li>Course revision and development</li>
+					<ul>
+						<li>5DV220 <a href="https://www.umu.se/en/education/syllabus/5dv220/" target="_blank">Computer
+								Security</a> - 2022</li>
+						<li>Planning and development committee for Machine Learning courses</a> - 2021</li>
+					</ul>
+				</ul>
+			</div>
+
+			<h3 class="content_separation">Assam Kaziranga University, India</h3>
+			<div class="profile_sections">
+				<ul class="profile_sections">
+					<li>Course revision and development</li>
+					<ul>
+						<li>ET 3312 Data Mining for Cyber Security - PhD course, 2015</li>
+						<li>UN 3003 Computational Software - PhD course, 2015</li>
+						<li>ET 1369 Network Security and Privacy (elective) - Bachelor course, 2014</li>
+
+					</ul>
+					<br>
+					<li>B.Tech(CSE) Semester VII (2014-2018 Batch)</li>
+					<ul>
+						<li>ET 1364 Cryptography </li>
+						<li>ET 1357 Algorithms Lab</li>
+					</ul>
+					<br>
+					<li>B.Tech(CSE+ECE+EE) Semester III (2016-2020 Batch) and B.Tech(CSE) Semester V (2015-2019 Batch)
+					</li>
+					<ul>
+						<li>ET 1345 Design and Analysis of Algorithms</li>
+					</ul>
+					<br>
+					<li>B.Tech(CSE+ECE+EE) Semester I (2017-2021 Batch) and B.Tech(CSE+ECE+EE) Semester III (2017-2020
+						Batch
+						Lateral)</li>
+					<ul>
+						<li>IBM 1301 Introduction to Open Source and Open Standards</li>
+					</ul>
 
 
-	<div id="footer">
-		<p>&copy; 2023 Monowar Bhuyan </p>
-	</div>
+					<br>
+					<li>B.Tech(CSE) Semester IV (2015-2019 Batch)</li>
+					<ul>
+						<li>ET 1339 UNIX and Linux Programming</li>
+						<li>ET 1340 UNIX and Linux Programming Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech(CSE) Semester II (2016-2020 Batch)</li>
+					<ul>
+						<li>ET 1384 Programming and Data Structures</li>
+						<li>ET 1385 Programming and Data Structures Lab</li>
+					</ul>
+
+					<br>
+					<li>PhD Course (CSE) Semester II (2016 Batch)</li>
+					<ul>
+						<li>ET 3312 Data Mining for Cyber Security</li>
+					</ul>
+
+					<br>
+					<li>B.Tech(CSE) Semester VII (2013-2017 Batch)</li>
+					<ul>
+						<li>ET 1364 Cryptography (elective)</li>
+						<li>ET 1357 Algorithms Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech(CSE) Semester I (2016-2020 Batch)</li>
+					<ul>
+						<li>IBM 1301 Introduction to Open Source and Open Standards (IBM Course)</li>
+					</ul>
+
+					<br>
+					<li>PhD Course (SET, SCS, SBS) Semester I (2016 Batch)</li>
+					<ul>
+						<li>UN 3003 Computational Software</li>
+					</ul>
+
+					<br>
+					<li>B.Tech.(ALL BRANCH) Semester II (2015-2019 Batch)</li>
+					<ul>
+						<li>ET 1320 Introduction to Computing</li>
+						<li>ET 1321 Introduction to Computing Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech.(CSE) Semester VII (2012-2016 Batch)</li>
+					<ul>
+						<li>ET 1369 Network Security and Privacy (elective)</li>
+						<li>ET 1358 Project Phase-I</li>
+					</ul>
+
+					<br>
+					<li>B.Tech.(CSE+ECE) Semester III (2014-2018 Batch)</li>
+					<ul>
+						<li>ET 1333 Data Structures Using C++</li>
+						<li>ET 1334 Data Structures Using C++ Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech.(CSE) Semester VI (2012-2016 Batch)</li>
+					<ul>
+						<li>ET 1350 Operating Systems</li>
+					</ul>
+
+					<br>
+					<li>M.Sc.(IT) Semester II (2014-2018 Batch)</li>
+					<ul>
+						<li>CS 2216 Operating Systems</li>
+					</ul>
+
+					<br>
+					<li>M.Sc.(IT) Semester IV (2013-2015 Batch)</li>
+					<ul>
+						<li>CS 2041 Cloud Computing</li>
+					</ul>
+
+					<br>
+					<li>B.Tech(CSE) Semester IV (2013-2017 Batch)</li>
+					<ul>
+						<li>ET 1335 Discrete Mathematics</li>
+					</ul>
+
+					<br>
+					<li>B.Tech(CSE) Semester IV (2013-2017 Batch)</li>
+					<ul>
+						<li>ET 1339 UNIX and Linux Programming</li>
+						<li>ET 1340 UNIX and Linux Programming Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech. (CSE) Semester V (2012-2016 Batch)</li>
+					<ul>
+						<li>ET 1345 Design and Analysis of Algorithms</li>
+					</ul>
+
+					<br>
+					<li>M.Sc. (IT) Semester III (2013-2015 Batch)</li>
+					<ul>
+						<li>CS 2225 Design and Analysis of Algorithms</li>
+					</ul>
+
+					<br>
+					<li>B.Tech. (CSE+ECE) Semester III (2013-2017 Batch)</li>
+					<ul>
+						<li>ET 1333 Data Structures Using C++</li>
+						<li>ET 1334 Data Structures Using C++ Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech. (CSE) Semester IV (2012-2016 Batch)</li>
+					<ul>
+						<li>ET 1323 Object-Oriented Programming Using JAVA</li>
+						<li>ET 1324 Object-Oriented Programming Using JAVA Lab</li>
+						<li>ET 1325 Data Communication</li>
+						<li>ET 1326 Data Communication Lab</li>
+					</ul>
+
+					<br>
+					<li>B.Tech. (CSE+ECE) Semester III (2012-2016 Batch)</li>
+					<ul>
+						<li>ET 1316 Advanced Data Structures</li>
+						<li>ET 1819 RDBMS Lab</li>
+					</ul>
+
+					<br>
+					<li>M.Sc. (IT) Semester I (2013-2015 Batch)</li>
+					<ul>
+						<li>CS 2119 Advanced Data Structures</li>
+						<li>CS 2139 ADBMS Lab</li>
+					</ul>
+				</ul>
+			</div>
+
+			<h3 class="content_separation">Tezpur University, India </h3>
+			<div class="profile_sections">
+				<ul class="profile_sections">
+					<li>MCA (2007-2010 Batch)</li>
+					<ul>
+						<li>DBMS Lab</li>
+						<li>Operating Systems Lab</li>
+					</ul>
+				</ul>
+			</div>
+
+			<h3 class="content_separation">NIELIT Centre, Tezpur University, India</h3>
+			<div class="profile_sections">
+				<ul class="profile_sections">
+					<li>'A' Level (2009-2013)</li>
+					<ul>
+						<li>A3-R4 Programming and Problem Solving through ‘C’ language</li>
+						<li>A5-R4 Structured System Analysis & Design</li>
+						<li>A6-R4 Data Structure through C++</li>
+						<li>A7-R4 Introduction to DBMS</li>
+						<li>A8-R4 Basics of OS, Unix & Shell Programming</li>
+						<li>A9-R4 Data Communication and Network Technologies</li>
+						<li>A10.1-R4 Introduction to Object-Oriented Programming Through JAVA</li>
+					</ul>
+				</ul>
+				<br><br>
+			</div>
+
+
+		</div>
+
+
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
 
 	</div>
 
 
 	<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1848088-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-1848088-2");
+			pageTracker._trackPageview();
+		} catch (err) { }</script>
 
-	</body>
+</body>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/teaching.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:47 GMT -->
+
 </html>
