--- a/research.html
+++ b/research.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+	<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
 
@@ -133,10 +141,9 @@
 			<h3 class="content_separation">Research Areas</h3>
 			<div class="profile_sections">
 				<ul>
-					<li>Data Synthesizing</li>
 					<li>Machine Learning</li>
 					<li>Anomaly Detection</li>
-					<li>Security and Privacy</li>
+					<li>Systems Security</li>
 					<li>Trustworthy AI</li>
 					<li>Distributed Systems</li>
 				</ul>
