--- a/talks.html
+++ b/talks.html
@@ -1,111 +1,269 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
+
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Personal webpage" />
 	<meta name="keywords" content="Monowar, H., Bhuyan, Umeå University, umu, computing science" />
-	<meta name="author" content="Monowar Bhuyan"/>
+	<meta name="author" content="Monowar Bhuyan" />
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
+
 	<head>
-	 <link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16"/>
-</head>
+		<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
+	</head>
 </head>
 
 <body>
-<div id="container" >
-	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
-		<h1> Monowar Bhuyan   </h1>
-		<h2> Assistant Professor of Computing Science, Umeå University </h2>
-	</div>
+	<div id="container">
 
-	<div id="navigation">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="profile.html">Profile</a></li>
-		<li><a href="research.html">Research</a></li>
-		<li><a href="teaching.html">Teaching</a></li>
-		<li><a href="group.html">Group</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li class="selected"><a href="talks.html">Talks</a></li>
-			<li><a href="activities.html">Community Services</a></li>
-		<li><a href="misc.html">Misc</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
+		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
+			<div id="department">
+				<h1>Department of Computing Science</h1>
+			</div>
+			<div id="border_dept_fac">
+			</div>
+			<div id="faculty">
+				<h1>Faculty of Science and Technology</h1>
+			</div>
+		</div>
 
-<div id="content">
-  <a name="current"> </a>
+		<div class="bio">
+			<img id="profile_img" src="pics/mb_web.jpg">
+			<div id="affiliation">
+				<h3>Affiliations</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+					University</li>
+				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+						Learning Group</a></li>
+				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+						target="_blank">Member</a>, Umeå AI </li>
+				<br>
+			</div>
+			<div id="external_links">
+				<h3>Links</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/"
+						target="_blank">Umeå
+						AI</a></li>
+				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
+				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
+						Science</a></li>
+				<br>
+				<li>Email: monowar (at) cs.umu.se</li>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
+					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/monowar-bhuyan-4a034416/" target="_blank">
+					<img src="pics/linkedin.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.researchgate.net/profile/Monowar_Bhuyan" target="_blank">
+					<img src="pics/rg.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://github.com/mbhuyan" target="_blank">
+					<img src="pics/gh.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+			</div>
+		</div>
 
-<ol>
-		<li><i>Anomaly Detection on the Edge - A Deep Learning Approach</i> - In the Department of Computer Science and Engineering, University of Calcutta, 2023.01.27, 2023, Kolkata.</li>
-		<br>
-	<li><i>Argumentation-Based Adversarial Regression with Multiple Learners</i> - In 34th IEEE Conference on Tools with Artificial Intelligence Virtual Event, 2022.10.31, Oct 31 - Nov 2, 2022.</li>
-<br>
-	<li><i>Deep Learning-Based Cyberattacks Behaviour Analysis for Cloud Systems </i> - In the International Faculty Development program on Data Analytics and Machine Learning, 2022.03.22, March 21-25, 2022, Mizoram University aand North-Eastern Hill University, India </li>
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
 
-	<br>
-	<li><i>Federated Learning - Privacy, Scalability and Open Challenges </i> - In an initiation meeting 2021.09.06, 2021, Harbin Institute of Technology, China</li>
+		<div class="contents">
+			<div class="profile_sections">
+				<ol>
+					<li><b>VSI-DDoS Detection on the Edge - A Combination Learner Approach</b> - In WASP Security
+						Cluster
+						Meeting, Uppsala University, 2023.05.31, 2023, Uppsala.</li>
+					<br>
 
-	<br>
-	<li><i>Trustworthy Learning to Uncover Anomalies at Scale</i> - In the ADS Lab, 2020.04.08, 2020, Umeå University, Sweden.</li>
-<br>
-	<li><i>Adversarial Impact on Anomaly Detection in Cloud Datacenters</i> - In the 24th IEEE Pacific Rim International Symposium on Dependable Computing (PRDC), 2019.12.03, December 1-3, 2019, Kyoto, Japan. </li>
-	<br>
-	<li><i>AI in Security : Does Data Matter?</i> - In the Information Science Divison at NARA Institute of Science and Technology (NAIST), Japan on 2019.11.26 invited by the Coordinator of Colloquium Lectures, NAIST. </li>
-	<br>
-	<li><i>Adversarial Learning-aware Anomaly Detection</i> - In the Information Technology Center at The University of Tokyo, Hongo Campus, Japan on 2019.11.22 invited by the Information Technology Center. </li>
-	<br>
-	<li><i>The Impact of AI on Security</i> - In the Training Industrial Cyber Security Experts at IPA (Information-technology Promotion Agency), a public entity of Japan on 2019.11.22 invited by IPA authority. </li>
-	<br>
-	<li><i>Information-theoretic Ensemble Learning for DDoS Detection with Adaptive Boosting</i> - The 31st IEEE International Conference on Tools with Artificial Intelligence (ICTAI), 2019.11.05, November 4-6, 2019, Portland, Oregon, USA organized by BAI Foundation. </li>
-	<br>
-  <li><i>Trustworthy Learning to Uncover Anomalies at Scale</i> - In Department of Computing Science, Umeå University, 2019.06.12, Sweden. </li>
-	<br>
-	<li><i>Why Anomaly Detection Matters for Critical Infrastructure Providers in Clouds?</i> - In the Cyber Resilience Lab at Nara Institute of Science and Technology, Japan on 2019.04.19 organized by the Laboratory for Cyber Resilience. </li>
-	<br>
-	<li><i>Multi-Scale Low-Rate DDoS Attack Detection Using the Generalized Total Variation Metric</i> -  In the 17th IEEE International Conference on Machine learning and Applications, Orlando, Florida, USA, 2018.12.20, December 17-20, 2018 organized by Association for Machine Learning and Applications (AMLA).</li>
-	<br>
-	<li><i>Data-driven DDoS Detection based on Generalized Total Variation Metric</i> -  UMIT Seminar Series, Umeå University, Sweden, 2018.11.17 organized by UMIT, Umeå University.</li>
-	<br>
-	<li><i>Monitoring Cloud Datacenters at Scale</i> - Bharat Institute of Technology, Meerut, India, 2018.06.23 organized by Internet Governance and Research Initiatives, Cyber Peace Foundation, Delhi.</li>
-	<br>
-	<li><i>Cyber Extortion : The Evolving DDoS Landscape</i> - 12th Cloud Control Workshop, Lövånger, Sweden, 2018.03.19 organized by Umeå University and Lund University, Sweden. </li>
-	<br>
-	<li><i>Applying Data Mining Techniques to Network Traffic Anomaly Detection</i> - Department of Computing Science, Umeå University, Sweden, 2017.10.20 organized by Distributed Systems Group, Umeå University.</li>
-	<br>
-	<li><i>Live Demonstration of Cyber Attacks in Enterprise Networks</i> - National Workshop on Network Security, March 15-16, 2013, Tezpur, India, 2013.03.16, organized by Department of Computer Science and Engineering, Tezpur University.</li>
-	<br>
-	<li><i>RODD: An Effective Reference-based Outlier Detection Technique for Large Datasets</i> - 1st International Conference on Computer Science and Information Technology, Jan 2-4, 2011, Royal Orchid Central, Bangalore, India, 2011.01.03</li>
-	<br>
-	<li><i>Anomaly-based Intrusion Detection using Incremental Approach</i> - National Workshop on Network Security, June 9-10, 2010, 2010.06.09, organized by Department of Computer Science and Engineering, Tezpur University.</li>
-	<br>
-</ol>
+					<li><b> Building Turst in AI for Healthcare Applicatiions</b> - In a workshop on AI in Medicine at
+						Rajasthan University of health Sciences, 2023.04.29, 2023, Jaipur, India.</li>
+					<br>
+					<li><b>Anomaly Detection on the Edge - A Deep Learning Approach</b> - In the Department of Computer
+						Science and Engineering, University of Calcutta, 2023.01.27, 2023, Kolkata, India.</li>
+					<br>
+					<li><b>Argumentation-Based Adversarial Regression with Multiple Learners</b> - In 34th IEEE
+						International Conference on Tools with Artificial Intelligence (ICTAI), Virtual Event,
+						2022.10.31,
+						Oct 31 - Nov 2, 2022.</li>
+					<br>
+					<li><b>Deep Learning-Based Cyberattacks Behaviour Analysis for Cloud Systems </b> - In the
+						International
+						Faculty Development program on Data Analytics and Machine Learning, 2022.03.22, March 21-25,
+						2022,
+						Mizoram University aand North-Eastern Hill University, India </li>
+
+					<br>
+					<li><b>Federated Learning - Privacy, Scalability and Open Challenges </b> - In an initiation meeting
+						2021.09.06, 2021, Harbin Institute of Technology, China</li>
+
+					<br>
+					<li><b>Trustworthy Learning to Uncover Anomalies at Scale</b> - In the ADS Lab, 2020.04.08, 2020,
+						Umeå
+						University, Sweden.</li>
+					<br>
+					<li><b>Adversarial Impact on Anomaly Detection in Cloud Datacenters</b> - In the 24th IEEE Pacific
+						Rim
+						International Symposium on Dependable Computing (PRDC), 2019.12.03, December 1-3, 2019, Kyoto,
+						Japan. </li>
+					<br>
+					<li><b>AI in Security : Does Data Matter?</b> - In the Information Science Divison at NARA Institute
+						of
+						Science and Technology (NAIST), Japan on 2019.11.26 invited by the Coordinator of Colloquium
+						Lectures, NAIST. </li>
+					<br>
+					<li><b>Adversarial Learning-aware Anomaly Detection</b> - In the Information Technology Center at
+						The
+						University of Tokyo, Hongo Campus, Japan on 2019.11.22 invited by the Information Technology
+						Center.
+					</li>
+					<br>
+					<li><b>The Impact of AI on Security</b> - In the Training Industrial Cyber Security Experts at IPA
+						(Information-technology Promotion Agency), a public entity of Japan on 2019.11.22 invited by IPA
+						authority. </li>
+					<br>
+					<li><b>Information-theoretic Ensemble Learning for DDoS Detection with Adaptive Boosting</b> - The
+						31st
+						IEEE International Conference on Tools with Artificial Intelligence (ICTAI), 2019.11.05,
+						November
+						4-6, 2019, Portland, Oregon, USA organized by BAI Foundation. </li>
+					<br>
+					<li><b>Trustworthy Learning to Uncover Anomalies at Scale</b> - In Department of Computing Science,
+						Umeå
+						University, 2019.06.12, Sweden. </li>
+					<br>
+					<li><b>Why Anomaly Detection Matters for Critical Infrastructure Providers in Clouds?</b> - In the
+						Cyber
+						Resilience Lab at Nara Institute of Science and Technology, Japan on 2019.04.19 organized by the
+						Laboratory for Cyber Resilience. </li>
+					<br>
+					<li><b>Multi-Scale Low-Rate DDoS Attack Detection Using the Generalized Total Variation Metric</b> -
+						In
+						the 17th IEEE International Conference on Machine learning and Applications, Orlando, Florida,
+						USA,
+						2018.12.20, December 17-20, 2018 organized by Association for Machine Learning and Applications
+						(AMLA).</li>
+					<br>
+					<li><b>Data-driven DDoS Detection based on Generalized Total Variation Metric</b> - UMIT Seminar
+						Series,
+						Umeå University, Sweden, 2018.11.17 organized by UMIT, Umeå University.</li>
+					<br>
+					<li><b>Monitoring Cloud Datacenters at Scale</b> - Bharat Institute of Technology, Meerut, India,
+						2018.06.23 organized by Internet Governance and Research Initiatives, Cyber Peace Foundation,
+						Delhi.
+					</li>
+					<br>
+					<li><b>Cyber Extortion : The Evolving DDoS Landscape</b> - 12th Cloud Control Workshop, Lövånger,
+						Sweden, 2018.03.19 organized by Umeå University and Lund University, Sweden. </li>
+					<br>
+					<li><b>Applying Data Mining Techniques to Network Traffic Anomaly Detection</b> - Department of
+						Computing Science, Umeå University, Sweden, 2017.10.20 organized by Distributed Systems Group,
+						Umeå
+						University.</li>
+					<br>
+					<li><b>Live Demonstration of Cyber Attacks in Enterprise Networks</b> - National Workshop on Network
+						Security, March 15-16, 2013, Tezpur, India, 2013.03.16, organized by Department of Computer
+						Science
+						and Engineering, Tezpur University.</li>
+					<br>
+					<li><b>RODD: An Effective Reference-based Outlier Detection Technique for Large Datasets</b> - 1st
+						International Conference on Computer Science and Information Technology, Jan 2-4, 2011, Royal
+						Orchid
+						Central, Bangalore, India, 2011.01.03</li>
+					<br>
+					<li><b>Anomaly-based Intrusion Detection using Incremental Approach</b> - National Workshop on
+						Network
+						Security, June 9-10, 2010, 2010.06.09, organized by Department of Computer Science and
+						Engineering,
+						Tezpur University.</li>
+					<br>
+				</ol>
+				<br>
+			</div>
 
 
-</div>
+		</div>
 
 
-	<div id="footer">
-		<p>&copy; 2023 Monowar Bhuyan </p>
-	</div>
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
 
 	</div>
 
 	<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1848088-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-1848088-2");
+			pageTracker._trackPageview();
+		} catch (err) { }</script>
 
-	</body>
+</body>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/archdef.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:15:53 GMT -->
+
 </html>
